Couple annotations from Adela on get_number

--- a/scripts/TEMPORAL-DISTRIBUTIONS_minimal-examples.ipynb
+++ b/scripts/TEMPORAL-DISTRIBUTIONS_minimal-examples.ipynb
@@ -6,7 +6,6 @@
       "name": "TEMPORAL-DISTRIBUTIONS_minimal-examples.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNL0YHgoNY4B2P+oOwg8cmQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,18 +81,18 @@
       "metadata": {
         "id": "TAQ5j9-3DD9j",
         "colab_type": "code",
+        "outputId": "e44119fa-074b-4616-b113-6541ef272f57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "e44119fa-074b-4616-b113-6541ef272f57"
+        }
       },
       "source": [
         "from scipy.stats import trapz\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +161,7 @@
       "source": [
         "dist_range(-400, -301) # * 100) + 100"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +229,7 @@
         "sns.distplot(iters, bins=20)\n",
         "plt.xlim(start, stop)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,7 +321,7 @@
       "source": [
         "dist_ante_post(250, \"post\")"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +365,7 @@
         "sns.distplot(iters, kde=False) # alternatively: hist=False\n",
         "plt.xlim(250, 350)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +448,7 @@
         "  sns.distplot(r, kde=False)\n",
         "  plt.xlim(250, 450)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -513,7 +512,7 @@
         "# simple test with \"post\"\n",
         "dist_ante_post(250, \"post\", 10)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +543,7 @@
         "# simple test with \"ante\"\n",
         "dist_ante_post(250, \"ante\", 10)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +585,7 @@
         "sns.distplot(r, kde=False)\n",
         "plt.xlim(1, 250)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -643,17 +642,17 @@
       "metadata": {
         "id": "ZS_vHZOCyh5V",
         "colab_type": "code",
+        "outputId": "b49d26cb-0b47-4d9d-9ec5-edf0af60e69f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "b49d26cb-0b47-4d9d-9ec5-edf0af60e69f"
+        }
       },
       "source": [
         "!pip install sddk\n",
         "import sddk"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,16 +683,16 @@
       "metadata": {
         "id": "S5cTTsMi49pX",
         "colab_type": "code",
+        "outputId": "1ecbec10-935c-4f95-ef0e-8cf88aa78516",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "1ecbec10-935c-4f95-ef0e-8cf88aa78516"
+        }
       },
       "source": [
         "conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\")"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,16 +771,16 @@
       "metadata": {
         "id": "OeV7_jYYSGA6",
         "colab_type": "code",
+        "outputId": "abb61b74-71f9-4969-fcfb-4e906646862d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 666
-        },
-        "outputId": "abb61b74-71f9-4969-fcfb-4e906646862d"
+        }
       },
       "source": [
         "AOR_df.head(5)"
       ],
-      "execution_count": 103,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,6 +1031,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5qEhUK1ZfAr0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Notice that the dataset has a 'FirstStartDate' and 'FirstEndDate' columns (These refer to the earliest time a mound was used, perhaps the first burial. Mounds are often reused over time)\n",
+        ". On the basis of the interval defined by these dates, we generate a new column of 1000  random numbers selected from the interval defined by the start date and end date, following the trapezoid distribution defined at the very top of this script. For the purpose of this script, imperfect values such as 'beginning of 4th c' are ignored and excluded from consideration.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xMrNU0rQQfVO",
@@ -1050,16 +1060,16 @@
       "metadata": {
         "id": "BHSl8H1tSuGf",
         "colab_type": "code",
+        "outputId": "98fd4a5d-e080-400a-b147-c66b19106f0a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "98fd4a5d-e080-400a-b147-c66b19106f0a"
+        }
       },
       "source": [
         "AOR_df[\"FirstStartDate\"].min()"
       ],
-      "execution_count": 117,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1080,16 +1090,16 @@
       "metadata": {
         "id": "TVAzaJi6S0eQ",
         "colab_type": "code",
+        "outputId": "6bfd71fd-ceb5-4811-eaef-96a7084b8395",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6bfd71fd-ceb5-4811-eaef-96a7084b8395"
+        }
       },
       "source": [
         "AOR_df[\"FirstEndDate\"].max()"
       ],
-      "execution_count": 118,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1106,25 +1116,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-LdfxxAngRL2",
+        "colab_type": "text"
+      },
+      "source": [
+        "Adela comments: the bit where get_number is used below is unclear to me. Are we grabbing each number from the randoms and placing it on the timeline by the century it falls into? The result being a histogram of how many times a century is represented within dataset, but this time based on 1000 * moundcount. We may be losing the SD that a true MC model (iterative generation of 1000 numbers over and over again) would generate, but maybe that can be tested later/"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "FEfWAmRySr32",
         "colab_type": "code",
+        "outputId": "b6249a34-4b7d-4804-bd90-5c6a01e937ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "b6249a34-4b7d-4804-bd90-5c6a01e937ef"
+        }
       },
       "source": [
         "step = 100\n",
         "bin_ranges=[n for n in range(-3500, 1500 + step, step)]\n",
-        "for n in range(len(AOR_df.iloc[0][\"randoms\"])): # for each number in lenght of our random numbers\n",
+        "for n in range(len(AOR_df.iloc[0][\"randoms\"])): # for each number in length of our random numbers\n",
         "  dates_variant = AOR_df.apply(lambda row: get_number(row, n), axis=1)\n",
         "  plt.hist(dates_variant, bins=bin_ranges, histtype='step', stacked=True, fill=False)\n",
         "  plt.xlim(-3500, 1500)"
       ],
-      "execution_count": 125,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1146,11 +1166,11 @@
       "metadata": {
         "id": "nCy8y51FUDzO",
         "colab_type": "code",
+        "outputId": "5fd2aa0d-cf6e-4f6b-ee39-802734b57425",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "5fd2aa0d-cf6e-4f6b-ee39-802734b57425"
+        }
       },
       "source": [
         "step = 100\n",
@@ -1160,7 +1180,7 @@
         "  plt.hist(dates_variant, bins=bin_ranges, histtype='step', stacked=True, fill=False)\n",
         "  plt.xlim(-1500, 500)"
       ],
-      "execution_count": 129,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1182,20 +1202,20 @@
       "metadata": {
         "id": "uXMdBI5RY4pj",
         "colab_type": "code",
+        "outputId": "0a5084e5-eb44-4d5c-b6fb-1dff50c9e27e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "0a5084e5-eb44-4d5c-b6fb-1dff50c9e27e"
+        }
       },
       "source": [
         "bin_ranges=[n for n in range(-1500, 500 + step, step)]\n",
-        "for n in range(len(AOR_df.iloc[0][\"randoms\"])): # for each number in lenght of our random numbers\n",
+        "for n in range(len(AOR_df.iloc[0][\"randoms\"])): # for each number in length of our random numbers\n",
         "  dates_variant = AOR_df.apply(lambda row: get_number(row, n), axis=1)\n",
         "  sns.distplot(dates_variant, hist=False)\n",
         "  plt.xlim(-1500, 500)"
       ],
-      "execution_count": 131,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1217,11 +1237,11 @@
       "metadata": {
         "id": "O3vtW9jrTNsf",
         "colab_type": "code",
+        "outputId": "2c27ab1d-c0dc-4b0c-af2a-c701a3d47ab1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "2c27ab1d-c0dc-4b0c-af2a-c701a3d47ab1"
+        }
       },
       "source": [
         "bin_ranges=[n for n in range(-1500, 500 + step, step)]\n",
@@ -1230,7 +1250,7 @@
         "  plt.hist(dates_variant, bins=bin_ranges, histtype='step', stacked=True, fill=False)\n",
         "  plt.xlim(-1500, 500)"
       ],
-      "execution_count": 128,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1252,11 +1272,11 @@
       "metadata": {
         "id": "ppikU2cxX6qO",
         "colab_type": "code",
+        "outputId": "b4f9df52-ccc8-4794-e76e-6b8016a625ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "b4f9df52-ccc8-4794-e76e-6b8016a625ca"
+        }
       },
       "source": [
         "bin_ranges=[n for n in range(-1500, 500 + step, step)]\n",
@@ -1265,7 +1285,7 @@
         "  sns.distplot(dates_variant, hist=False)\n",
         "  plt.xlim(-1500, 500)"
       ],
-      "execution_count": 130,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1331,16 +1351,16 @@
       "metadata": {
         "id": "tNA21yB6hx1g",
         "colab_type": "code",
+        "outputId": "cb93727d-e982-4774-9a1d-830d7069276f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
-        },
-        "outputId": "cb93727d-e982-4774-9a1d-830d7069276f"
+        }
       },
       "source": [
         "EDH.head(5)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1753,11 +1773,11 @@
       "metadata": {
         "id": "5gfIgcEX7I6c",
         "colab_type": "code",
+        "outputId": "c51079c2-fd88-4fc7-ac1a-75f14129bbbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c51079c2-fd88-4fc7-ac1a-75f14129bbbb"
+        }
       },
       "source": [
         "\n",
@@ -1765,7 +1785,7 @@
         "EDH_dated = EDH[(EDH[\"not_before\"].notnull()) | (EDH[\"not_after\"].notnull())]\n",
         "len(EDH_dated)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1786,16 +1806,16 @@
       "metadata": {
         "id": "O98mIA3C6z1r",
         "colab_type": "code",
+        "outputId": "f47f6c0c-e166-43ed-acd4-1926d49885e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f47f6c0c-e166-43ed-acd4-1926d49885e3"
+        }
       },
       "source": [
         "len(EDH_dated[EDH_dated[\"not_after\"].isnull()])"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1816,16 +1836,16 @@
       "metadata": {
         "id": "iOzYoF3M9RGV",
         "colab_type": "code",
+        "outputId": "fc2e3933-664a-4da0-89e5-8f2b7cc42997",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "fc2e3933-664a-4da0-89e5-8f2b7cc42997"
+        }
       },
       "source": [
         "EDH_dated[\"randoms\"] = EDH_dated.apply(lambda row: model_date(row[\"not_before\"], row[\"not_after\"]), axis=1)"
       ],
-      "execution_count": 73,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1846,17 +1866,17 @@
       "metadata": {
         "id": "pmB7mnqMPNtL",
         "colab_type": "code",
+        "outputId": "6d7beb82-718b-4a74-e759-81ffa6cbe74d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 669
-        },
-        "outputId": "6d7beb82-718b-4a74-e759-81ffa6cbe74d"
+        }
       },
       "source": [
         "EDH_condensed = EDH_dated[[\"id\", \"not_before\", \"not_after\", \"randoms\"]]\n",
         "EDH_condensed.head(20)"
       ],
-      "execution_count": 98,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2069,11 +2089,11 @@
       "metadata": {
         "id": "kK5ZVXvlLrnC",
         "colab_type": "code",
+        "outputId": "2704adfd-1090-489d-f86f-69f6048362e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "2704adfd-1090-489d-f86f-69f6048362e4"
+        }
       },
       "source": [
         "def get_number(row, n):\n",
@@ -2089,7 +2109,7 @@
         "  plt.hist(dates_variant, bins=bin_ranges, histtype='step', stacked=True, fill=False)\n",
         "  plt.xlim(-100, 400)\n"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2111,11 +2131,11 @@
       "metadata": {
         "id": "ft56sYSlt-Xi",
         "colab_type": "code",
+        "outputId": "809ba009-ab4d-4246-8484-60ebd1c23205",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "809ba009-ab4d-4246-8484-60ebd1c23205"
+        }
       },
       "source": [
         "for n in range(100):\n",
@@ -2123,7 +2143,7 @@
         "  sns.distplot(dates_variant, hist=False)\n",
         "plt.xlim(-100, 400)"
       ],
-      "execution_count": 99,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
