--- a/scripts/TEMPORAL-DISTRIBUTIONS_minimal-examples.ipynb
+++ b/scripts/TEMPORAL-DISTRIBUTIONS_minimal-examples.ipynb
@@ -25,19 +25,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xBTHW17CHMet",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "C2T2U0LaHNzK",
@@ -63,6 +50,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "!pip install sddk\n",
         "import sddk"
@@ -78,6 +66,19 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "46Nom9dEPD-p",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1028,91 +1029,6 @@
       },
       "source": [
         "# Test with some dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tF8BSs5_la3_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import pandas as pd"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZS_vHZOCyh5V",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 340
-        },
-        "outputId": "4cb6cee3-ee7d-4185-9025-2e97c6c46fd2"
-      },
-      "source": [
-        "!pip install sddk\n",
-        "import sddk"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting sddk\n",
-            "  Downloading https://files.pythonhosted.org/packages/bf/96/3ae43f2d8ac06fc16ba111916970e5a1f3b96a3e41732fa3f099e2e5cd1c/sddk-2.6-py3-none-any.whl\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from sddk) (3.2.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from sddk) (2.23.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from sddk) (1.18.5)\n",
-            "Requirement already satisfied: pyarrow in /usr/local/lib/python3.6/dist-packages (from sddk) (0.14.1)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from sddk) (1.0.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->sddk) (2.8.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->sddk) (1.2.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->sddk) (2.4.7)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->sddk) (0.10.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->sddk) (2.9)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->sddk) (2020.4.5.2)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->sddk) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->sddk) (3.0.4)\n",
-            "Requirement already satisfied: six>=1.0.0 in /usr/local/lib/python3.6/dist-packages (from pyarrow->sddk) (1.12.0)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->sddk) (2018.9)\n",
-            "Installing collected packages: sddk\n",
-            "Successfully installed sddk-2.6\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "S5cTTsMi49pX",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "aef629ee-2da5-465a-c44a-a199dc775e0c"
-      },
-      "source": [
-        "conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "sciencedata.dk username (format '123456@au.dk'): 648597@au.dk\n",
-            "sciencedata.dk password: ··········\n",
-            "connection with shared folder established with you as its owner\n",
-            "endpoint variable has been configured to: https://sciencedata.dk/files/SDAM_root/\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
