--- a/scripts/distributions_development+examples.ipynb
+++ b/scripts/distributions_development+examples.ipynb
@@ -3910,11 +3910,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_timeblocks_data(list_of_timeblocks_data, ax=None):\n",
+    "def plot_timeblocks_data(list_of_timeblocks_data, ax=None, color=None):\n",
     "  \"\"\"\n",
     "  plot timeblocks data as a series of overlapping line plots \n",
     "  \"\"\"\n",
@@ -3922,17 +3922,16 @@
     "    x = [np.mean(tuptup[0]) for tuptup in timeblocks]\n",
     "    y = [tuptup[1] for tuptup in timeblocks]\n",
     "    if ax != None:\n",
-    "      ax.plot(x, y)\n",
+    "        if color != None:\n",
+    "            ax.plot(x, y, color=color)\n",
+    "        else: \n",
+    "            ax.plot(x, y)\n",
     "    else:\n",
-    "      plt.plot(x, y)"
+    "        if color != None:\n",
+    "            plt.plot(x, y, color=color)\n",
+    "        else: \n",
+    "            plt.plot(x, y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -5772,6 +5771,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
