Changed the way the script connects to sddk, so that it uses cloudsession instead of configure

--- a/scripts/distributions_development+examples.ipynb
+++ b/scripts/distributions_development+examples.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -50,15 +50,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sciencedata.dk username (format '123456@au.dk'): 648597@au.dk\n",
-      "sciencedata.dk password: ········\n",
-      "connection with shared folder established with you as its owner\n",
-      "endpoint variable has been configured to: https://sciencedata.dk/files/SDAM_root/\n"
+      "Your ScienceData username (e.g. '123456@au.dk'): 589995@au.dk\n",
+      "Your ScienceData password: ········\n",
+      "connection with shared folder established with you as its ordinary user\n",
+      "endpoint variable has been configured to: https://sciencedata.dk/sharingout/648597%40au.dk/SDAM_root/\n"
      ]
     }
    ],
    "source": [
-    "conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\")"
+    "#conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\") #Old way of configuring to Sciencedata\n",
+    "s = sddk.cloudSession(\"sciencedata.dk\", \"SDAM_root\",\"648597@au.dk\") #New way of configuring "
    ]
   },
   {
@@ -720,7 +721,8 @@
    ],
    "source": [
     "# for oslo presentation\n",
-    "#sddk.write_file(\"SDAM_data/EDH/public/distributions_overview_2020-10-08.png\", fig, conf)"
+    "#sddk.write_file(\"SDAM_data/EDH/public/distributions_overview_2020-10-08.png\", fig, conf) (old version)\n",
+    "#s.write_file(\"SDAM_data/EDH/public/distributions_overview_2020-10-08.png\", fig) (new version of pushing to sddk)"
    ]
   },
   {
@@ -915,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -923,13 +925,15 @@
    },
    "outputs": [],
    "source": [
-    "AOR_df = sddk.read_file(\"SDAM_data/mounds/AOR_df.json\", \"df\", conf)\n",
-    "Izvestia_df = sddk.read_file(\"SDAM_data/mounds/Izvestia_df.json\", \"df\", conf)"
+    "#AOR_df = sddk.read_file(\"SDAM_data/mounds/AOR_df.json\", \"df\", conf) #old version of connecting to sddk\n",
+    "AOR_df = s.read_file(\"SDAM_data/mounds/AOR_df.json\", \"df\") #New version of connecting to sddk\n",
+    "#Izvestia_df = sddk.read_file(\"SDAM_data/mounds/Izvestia_df.json\", \"df\", conf) #old version of connecting to sddk\n",
+    "Izvestia_df = s.read_file(\"SDAM_data/mounds/Izvestia_df.json\", \"df\") #New version of connecting to sddk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1163,7 +1167,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4040,7 +4044,8 @@
    "outputs": [],
    "source": [
     "# read the EDH dataset from sciencedata.dk\n",
-    "PHI = sddk.read_file(\"SDAM_data/PHI/PHI_dated_2020-06-23.json\", \"df\", conf)"
+    "#PHI = sddk.read_file(\"SDAM_data/PHI/PHI_dated_2020-06-23.json\", \"df\", conf) #old version of connecting to sddk\n",
+    "PHI = s.read_file(\"SDAM_data/PHI/PHI_dated_2020-06-23.json\", \"df\") #new version of connecting to sddk"
    ]
   },
   {
@@ -4903,27 +4908,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "qi7yYCwA448X"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file has not been found; check filename and path.\n"
+     ]
+    }
+   ],
    "source": [
     "# read the EDH dataset from sciencedata.dk\n",
-    "EDH = sddk.read_file(\"SDAM_data/EDH/EDH_cleaned.json\", \"df\", conf)"
+    "#EDH = sddk.read_file(\"SDAM_data/EDH/EDH_cleaned.json\", \"df\", conf)\n",
+    "EDH =  s.read_file(\"SDAM_data/EDH/EDH_cleaned.json\", \"df\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ytVWvGfw448e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     value \u001b[38;5;241m=\u001b[39m list_or_value\n\u001b[1;32m      6\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m value\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m \u001b[43mEDH\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m:\n\u001b[1;32m      8\u001b[0m   EDH[column] \u001b[38;5;241m=\u001b[39m EDH\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m row: lists_to_values(row[column]), axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'columns'"
+     ]
+    }
+   ],
    "source": [
     "def lists_to_values(list_or_value):\n",
     "  if isinstance(list_or_value, list):\n",
@@ -5786,7 +5812,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5800,7 +5826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
