--- a/scripts/TEMPORAL-DISTRIBUTIONS_minimal-examples_JULY.ipynb
+++ b/scripts/TEMPORAL-DISTRIBUTIONS_minimal-examples_JULY.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -34,11 +34,29 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
+      "Requirement already satisfied: sddk in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (3.2)\n",
+      "Requirement already satisfied: matplotlib>=3.3.4 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from sddk) (3.5.1)\n",
+      "Requirement already satisfied: beautifulsoup4>=4 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from sddk) (4.11.1)\n",
+      "Requirement already satisfied: requests>=2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from sddk) (2.27.1)\n",
+      "Requirement already satisfied: numpy>=1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from sddk) (1.22.3)\n",
+      "Requirement already satisfied: pandas>=1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from sddk) (1.4.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from beautifulsoup4>=4->sddk) (2.3.2.post1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.3.4->sddk) (4.33.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.3.4->sddk) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.3.4->sddk) (1.4.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.3.4->sddk) (3.0.8)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.3.4->sddk) (9.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.3.4->sddk) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.3.4->sddk) (21.3)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas>=1->sddk) (2022.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests>=2->sddk) (1.26.9)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests>=2->sddk) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests>=2->sddk) (2.0.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests>=2->sddk) (2021.10.8)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=3.3.4->sddk) (1.16.0)\n"
      ]
     }
    ],
@@ -55,15 +73,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "46Nom9dEPD-p"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your ScienceData username (e.g. '123456@au.dk'): 589995@au.dk\n",
+      "Your ScienceData password: ········\n",
+      "connection with shared folder established with you as its ordinary user\n",
+      "endpoint variable has been configured to: https://sciencedata.dk/sharingout/648597%40au.dk/SDAM_root/\n"
+     ]
+    }
+   ],
    "source": [
-    "conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\")"
+    "#conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\") #old version of connecting to sddk\n",
+    "s = sddk.cloudSession(\"sciencedata.dk\", \"SDAM_root\",\"648597@au.dk\") #new version of connecting"
    ]
   },
   {
@@ -960,7 +990,8 @@
     }
    ],
    "source": [
-    "conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\")"
+    "#conf = sddk.configure(\"SDAM_root\", \"648597@au.dk\")\n",
+    "s = sddk.cloudSession(\"sciencedata.dk\", \"SDAM_root\",\"648597@au.dk\") #new version of connecting"
    ]
   },
   {
@@ -988,7 +1019,8 @@
    ],
    "source": [
     "#public_folder_link = \"69932bf8fbdd2b37a23e1e5ae1c3206b\"\n",
-    "sddk.write_file(\"SDAM_data/temporal_uncertainty/distributions_overview.png\", fig, conf)"
+    "#sddk.write_file(\"SDAM_data/temporal_uncertainty/distributions_overview.png\", fig, conf)\n",
+    "s.write_file(\"SDAM_data/temporal_uncertainty/distributions_overview.png\", fig) #new version of pushing to sddk."
    ]
   },
   {
@@ -1061,8 +1093,10 @@
    },
    "outputs": [],
    "source": [
-    "AOR_df = sddk.read_file(\"SDAM_data/mounds/AOR_df.json\", \"df\", conf)\n",
-    "Izvestia_df = sddk.read_file(\"SDAM_data/mounds/Izvestia_df.json\", \"df\", conf)"
+    "#AOR_df = sddk.read_file(\"SDAM_data/mounds/AOR_df.json\", \"df\", conf)\n",
+    "AOR_df = s.read_file(\"SDAM_data/mounds/AOR_df.json\", \"df\") #New version of connecting to sddk\n",
+    "#Izvestia_df = sddk.read_file(\"SDAM_data/mounds/Izvestia_df.json\", \"df\", conf)\n",
+    "Izvestia_df = s.read_file(\"SDAM_data/mounds/Izvestia_df.json\", \"df\") #New version of connecting to sddk"
    ]
   },
   {
@@ -1886,7 +1920,8 @@
    "outputs": [],
    "source": [
     "# read the EDH dataset from sciencedata.dk\n",
-    "PHI = sddk.read_file(\"SDAM_data/PHI/PHI_dated_2020-06-23.json\", \"df\", conf)"
+    "#PHI = sddk.read_file(\"SDAM_data/PHI/PHI_dated_2020-06-23.json\", \"df\", conf)\n",
+    "PHI = s.read_file(\"SDAM_data/PHI/PHI_dated_2020-06-23.json\", \"df\") #new version of connecting to sddk"
    ]
   },
   {
@@ -2758,7 +2793,8 @@
    "outputs": [],
    "source": [
     "# read the EDH dataset from sciencedata.dk\n",
-    "EDH = sddk.read_file(\"SDAM_data/EDH/EDH_cleaned.json\", \"df\", conf)"
+    "#EDH = sddk.read_file(\"SDAM_data/EDH/EDH_cleaned.json\", \"df\", conf)\n",
+    "EDH =  s.read_file(\"SDAM_data/EDH/EDH_cleaned.json\", \"df\")"
    ]
   },
   {
@@ -3649,7 +3685,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3663,7 +3699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
